kubernetes/EP13-real-k8s-app/k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hogwarts-library-service

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
    targetPort: 5432

  type: ClusterIP
