kubernetes/EP13-real-k8s-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: platform-9-3-4

spec:
  ingressClassName: nginx

  rules:
  - host: app.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hogwarts-portal-svc

            port:
              number: 80
